--- a/ui/src/app/components/accept-booking/accept-booking.component.html
+++ b/ui/src/app/components/accept-booking/accept-booking.component.html
@@ -91,7 +91,22 @@
                     <input matInput placeholder="Location" />
                 </mat-form-field>
             </td>
-        </ng-container>   
+        </ng-container>  
+        
+        <!-- ACTION Column -->
+     <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> ACTION </th>
+        <td mat-cell *matCellDef="let row">
+           
+            
+            <button mat-icon-button style="color: yellowgreen;" (click)="acceptnow(row)" aria-label="Example icon-button with a heart icon">
+                <mat-icon>check_circle</mat-icon>
+            </button>
+
+            
+        </td>
+        <td mat-footer-cell *matFooterCellDef> <mat-icon color="accent"></mat-icon> </td>
+    </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> 
