--- a/ui/src/app/components/dialog/booknow-dialog.component.html
+++ b/ui/src/app/components/dialog/booknow-dialog.component.html
@@ -14,6 +14,12 @@
             <input matInput placeholder="Dealer" [(ngModel)]="data.dealerId" [ngModelOptions]="{standalone: true}" disabled>
         </mat-form-field>
         <mat-form-field class="full-width">
+            <input matInput placeholder="Source" [(ngModel)]="data.source" [ngModelOptions]="{standalone: true}" >
+        </mat-form-field>
+        <mat-form-field class="full-width">
+            <input matInput placeholder="Destination" [(ngModel)]="data.destination" [ngModelOptions]="{standalone: true}" >
+        </mat-form-field>
+        <mat-form-field class="full-width">
             <input matInput [matDatepicker]="picker1" [min]="today" placeholder="From Date" [(ngModel)]="data.startDate" [ngModelOptions]="{standalone: true}" (dateChange)="dateChanged()">
             <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
             <mat-datepicker #picker1 startView="month" [startAt]="data.startDate"></mat-datepicker>
