--- a/ui/src/app/components/login/login.component.html
+++ b/ui/src/app/components/login/login.component.html
@@ -8,6 +8,7 @@
                 <!-- <mat-radio-group [formControl]="userTypeFormControl">
                     <mat-radio-button value="customer" checked>Customer</mat-radio-button>
                     <mat-radio-button value="dealer">Dealer</mat-radio-button>
+                    <mat-radio-button value="driver">Driver</mat-radio-button>
                 </mat-radio-group>
 
                 <mat-divider></mat-divider>
@@ -17,11 +18,11 @@
                 <mat-form-field class="full-width">
                     <input matInput placeholder="Username" [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
                     <!-- <mat-hint>Enter username</mat-hint> -->
-                    <!-- <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
+                    <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
                         Please enter a valid username
-                    </mat-error> -->
+                    </mat-error>
                     <mat-error *ngIf="usernameFormControl.hasError('required')">
-                        Username is <strong>required</strong>
+                        Username is <strong>required</strong> 
                     </mat-error>
                 </mat-form-field>
                 
